--- a/Church_Staff.html
+++ b/Church_Staff.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Our Staff</title>
-		<link rel="stylesheet" type="text/css" href="css/Staff_layout.css">
+		<link rel="stylesheet" type="text/css" href="css/Staff_Layout.css">
 		<script src="js/Home_js.js" type = 'text/javaScript'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
