--- a/Church_Index.html
+++ b/Church_Index.html
@@ -10,22 +10,40 @@
 	</head>
 
 	<body>
+		<div id="mySidenav" class="sidenav">
+		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		  <a href="#">Home</a>
+		  <a href="Church_About.html">About Us</a>
+		  <a href="Church_Staff.html">Our Staff</a>
+		  <a href="#">News</a>
+		  <a href="#">Calendar</a>
+		</div>
+
+		<span onclick= "openNav()" id = "menu_nav">Menu</span>
+		<!--<div onclick= "openNav()" id = "dropbtn">
+				<span class = "span1"></span>
+				<span class = "span2"></span>
+				<span class = "span3"></span>
+		</div>
+		
+		<!--
 		<span class = "menu_nav">Menu</span>
 			<div onclick= "myFunction()" class = "dropbtn">
 				<span class = "span1"></span>
 				<span class = "span2"></span>
 				<span class = "span3"></span>
-			</div><!--end of dropbtn-->
+			</div>
 			<div id = "myDropdown" class = "dropdown-content">
 				<div class= "nav-bar">
-				</div> <!--end of nav-bar-->
+				</div> 
 				<img src = "images/K1_logo.gif" class = "logo" style = "width: 64px; height: 64px;"/> 
 				<a class = "home" href = "">Home</a>
 				<a class = "about" href = "Church_About.html">About Us</a>
 				<a class = "experience" href = "Church_Staff.html">Our Staff</a>
 				<a class = "work" href = "">News</a>
 				<a class = "contact" href = "">Calendar</a>
-			</div> <!--end myDropdown-->
+			</div> 
+		-->
 			
 		<div class = "K1_Logo" style = "text-align: center;">
 			<img src="images/K1_logo.gif" style = "width: 160px; height: 160px;"/>
