--- a/Church_About.html
+++ b/Church_About.html
@@ -8,22 +8,17 @@
 	</head>
 
 	<body>
-		<span class = "menu_nav">Menu</span>
-			<div onclick= "myFunction()" class = "dropbtn">
-				<span class = "span1"></span>
-				<span class = "span2"></span>
-				<span class = "span3"></span>
-			</div><!--end of dropbtn-->
-			<div id = "myDropdown" class = "dropdown-content">
-				<div class= "nav-bar">
-				</div> <!--end of nav-bar-->
-				<img src = "images/K1_logo.gif" class = "logo" style = "width: 64px; height: 64px;"/> 
-				<a class = "home" href = "Church_Index.html">Home</a>
-				<a class = "about" href = "Church_About.html">About Us</a>
-				<a class = "experience" href = "Church_Staff.html">Our Staff</a>
-				<a class = "work" href = "">News</a>
-				<a class = "contact" href = "">Calendar</a>
-			</div> <!--end myDropdown-->
+		<div id="mySidenav" class="sidenav">
+		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		  <a href="#">Home</a>
+		  <a href="Church_About.html">About Us</a>
+		  <a href="Church_Staff.html">Our Staff</a>
+		  <a href="#">News</a>
+		  <a href="#">Calendar</a>
+		</div>
+
+		<span onclick= "openNav()" id = "menu_nav">Menu</span>
+	
 		<div class = "header">
 			<div class = "words">
 				<p>“ All Scripture is inspired by God and is useful to teach us what is true and to make us realize what is wrong in our lives. It corrects us when we are wrong and teaches us to do what is right.”</p>
