--- a/Church_Index.html
+++ b/Church_Index.html
@@ -20,7 +20,7 @@
 		  <a href="#">Calendar</a>
 		</div>
 
-		<img src = "images/K1_logo_transparent.png" style = "width: 380px; height: 75px;"/>
+		<img src = "images/K1_logo_transparent.png" style = "width: 253px; height: 50px; margin: 20px;"/>
 		<span onclick= "openNav()" id = "menu_nav">Menu</span>
 			
 		<div class = "K1_Logo" style = "text-align: center;">
