--- a/Church_Index.html
+++ b/Church_Index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div id="mySidenav" class="sidenav">
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		  <a href="#">Home</a>
+		  <a href="Church_Index.html">Home</a>
 		  <a href="Church_About.html">About Us</a>
 		  <a href="Church_Staff.html">Our Staff</a>
 		  <a href="#">News</a>
@@ -21,7 +21,7 @@
 		</div>
 
 		<img src = "images/K1_logo_transparent.png" style = "width: 253px; height: 50px; margin: 20px;"/>
-		<span onclick= "openNav()" id = "menu_nav">Menu</span>
+		<a onclick= "openNav()" id = "menu_nav">Menu</a>
 			
 		<div class = "K1_Logo" style = "text-align: center;">
 			<h1 style = "font-size: 110px; padding-bottom: 0px;">WE ARE</h1>
