--- a/Church_About.html
+++ b/Church_About.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>About Us</title>
 		<link rel="stylesheet" type="text/css" href="css/About_layout.css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
 		<script src="js/Home_js.js" type = 'text/javaScript'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -10,7 +11,7 @@
 	<body>
 		<div id="mySidenav" class="sidenav">
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		  <a href="#">Home</a>
+		  <a href="Church_Index.html">Home</a>
 		  <a href="Church_About.html">About Us</a>
 		  <a href="Church_Staff.html">Our Staff</a>
 		  <a href="#">News</a>
