--- a/Church_Staff.html
+++ b/Church_Staff.html
@@ -3,14 +3,17 @@
 		<title>Our Staff</title>
 		<link rel="stylesheet" type="text/css" href="css/Staff_Layout.css">
 		<script src="js/Home_js.js" type = 'text/javaScript'></script>
+		<link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Hammersmith+One|Signika+Negative" rel="stylesheet">
 	</head>
 
 	<body>
 		<div id="mySidenav" class="sidenav">
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		  <a href="#">Home</a>
+		  <a href="Church_Index.html">Home</a>
 		  <a href="Church_About.html">About Us</a>
 		  <a href="Church_Staff.html">Our Staff</a>
 		  <a href="#">News</a>
@@ -21,16 +24,30 @@
 		
 		<div class = "header">
 			<div class = "words">
-				<p>"Now these are the gifts Christ gave to the church: the apostles, the prophets, the evangelists, and the pastors and teachers"</p>
-				<p>- Ephesians 4:11</p>
+				<h1></h1>
 			</div>
 		</div>
 		
 		<div class = "our_staff">
+			<div class= "our_team">
+				<div class= "meaning_block_content">
+					<h1>What You Mean To Us</h1>
+					<p>Joining our K1 Church family means that you are important to us. It means that we, as the church leadership, commit ourselves to doing our best to honor you
+					and celebrate life with you. As part of our community, you will have a place to belong. <p>
+				</div>
+				<div class= "team_block_content">
+					<h1>Meet the Team</h1>
+					<p>Each of us have been forever changed by the message of grace. Our heart is to see every life touched by this message and to experience God's goodness and His 
+						intimate love for them.</p>
+				</div>
+			</div>
+			
+			<hr/>
+			
 			<div class = "senior_pastor">
 				<img src = "images/pastor_paul.jpg" style = "width:235.62; height:277.65;"/>
 				<div class = "senior_pastor_text">
-					<h2>Lead Pastor - Paul Wright</h2>
+					<h1>Lead Pastors - Paul & Wanda Wright</h1>
 					<p>Kingsport First would like to introduce you to its Pastors, Paul and Wanda Wright. The Wrights come to us from Somerville, TN where 
 					   they were lead pastors at Victory Life Assembly of God for 10 years. They have served as Foreign Missionaries with the Assemblies of God, 
 					   on the presbytery boards of two Districts and Foreign Mission Secretary.</p>
@@ -46,7 +63,7 @@
 			<div class = "worship_pastor">
 				<img src = "images/pastor_tim.jpg" style = "width: 235.62; height: 300; "/>
 				<div class = "worship_pastor_text">
-					<h2 >Worship & Creative Arts Pastor - Timothy Frisby</h2>
+					<h1 >Worship & Creative Arts Pastor - Timothy Frisby</h1>
 					<p>Timothy has served as worship and creative arts pastor at K1Church since 2016. He comes from a very large family of 13. 
 						He is very passionate about leading the church body into the presence of God through dynamic and authentic praise and worship. 
 						This guy never ceases to give God his best praise – and will encourage you to do the same! Timothy has been married to his wife, 
@@ -60,7 +77,7 @@
 			<div class = "children_pastor">
 				<img src = "images/pastor_will.jpg" style = "width: 235.61; height: 382.2;"/>
 				<div class = "children_pastor_text">	
-					<h2>Children's Pastor - Will Watts</h2>
+					<h1>Children's Pastor - Will Watts</h1>
 					<p>Will Watts serves as our our children’s pastor. Prior to joining the Kingsport First staff, Will spent seven years serving in various
 					   positions in kids ministry ranging from volunteer to children’s pastor.  He firmly believes that children are not the church of tomorrow, 
 					   but the church of today. It his goal to partner with parents to spark within the children of the church an unquenchable thirst for God.</p>
