added events link

--- a/Church_Events.html
+++ b/Church_Events.html
@@ -16,7 +16,7 @@
 		  <a href="Church_Index.html">Home</a>
 		  <a href="Church_About.html">About Us</a>
 		  <a href="Church_Staff.html">Our Staff</a>
-		  <a href="#">News</a>
+		  <a href="Church_Events.html">Events</a>
 		  <a href="#">Calendar</a>
 		</div>
 
